05-登陆和注册前台

--- a/src/assets/navStyle.wxss
+++ b/src/assets/navStyle.wxss
@@ -1,5 +1,5 @@
 .am-radio {
-  border: 1.5px solid #F1A200;
+  border: 1.5px solid #b9b7b3;
   border-radius: 50%;
   top: -1.5px;
 }
@@ -8,4 +8,7 @@
   width: 6px;
   height: 11px;
   top: -0.5px;
+}
+.am-radio-checked {
+  border-color: #F1A200;
 }
