--- a/src/assets/navStyle.less
+++ b/src/assets/navStyle.less
@@ -1,5 +1,6 @@
 .am-radio {
-  border: 1.5px solid #F1A200;
+  //  #F1A200
+  border: 1.5px solid #b9b7b3;
   border-radius: 50%;
   top: -1.5px;
   .am-radio-inner:after {
@@ -8,4 +9,7 @@
     height: 11px;
     top: -0.5px;
   }
+}
+.am-radio-checked {
+  border-color:#F1A200;
 }
