--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -1,6 +1,32 @@
+.stick-top {
+  position: fixed;
+  top:0;
+  width: 100%;
+  z-index: 10 // 不设置列表会窜出去
+}
+
+.userList{
+  // position: relative;
+  margin-top: 50px;
+  margin-bottom: 60px;
+}
+
+// .content{
+//   position: inherit;
+// }
+
 .am-tab-bar{
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
-  z-index: -1;
+  z-index:10;
+  height: 100%;
+}
+
+.logout{
+  z-index: 11;
+}
+
+.down{
+  margin-top: 50px;
 }
