--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -50,12 +50,9 @@
   margin-right: -100px;
 }
 
-.chat-item {
-  padding: 50px 0;
-}
-
 .chat-nav{
   position: fixed;
   width: 100%;
   z-index: 10;
+  top: 0;
 }
