--- a/src/assets/main.wxss
+++ b/src/assets/main.wxss
@@ -41,11 +41,9 @@
   text-align: right !important;
   margin-right: -100px;
 }
-.chat-item {
-  padding: 50px 0;
-}
 .chat-nav {
   position: fixed;
   width: 100%;
   z-index: 10;
+  top: 0;
 }
