--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -12,10 +12,11 @@
 }
 
 .am-tab-bar{
-  position: fixed;
+  position: fixed;  
   bottom: 0;
   width: 100%;
   z-index:10;
+  height: inherit !important;
 }
 
 .logout{
